Update 'go-dfvtqhds' component image to: artifactory-docker-artifactory-jcr2.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/go-dfvtqhds:9e1991b1305c1698bdcbdc94600908a858cdb7ad@sha256:0ad1e40cc6cdbd27490cfacd49ec3085dc65738f64262bd2b5b8c3f0e736e1c0

--- a/components/go-dfvtqhds/overlays/development/deployment-patch.yaml
+++ b/components/go-dfvtqhds/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-dfvtqhds
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: artifactory-docker-artifactory-jcr2.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/go-dfvtqhds:9e1991b1305c1698bdcbdc94600908a858cdb7ad@sha256:0ad1e40cc6cdbd27490cfacd49ec3085dc65738f64262bd2b5b8c3f0e736e1c0
+          name: container-image
